--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,8 @@
-{\rtf1\ansi\ansicpg932\cocoartf2639
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;\red23\green23\blue23;\red234\green234\blue234;}
-{\*\expandedcolortbl;;\cssrgb\c11765\c11765\c11765;\cssrgb\c93333\c93333\c93333;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs36 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 \
-}
+AuthUserFile /home/path../.htpasswd
+AuthGroupFile /dev/null
+AuthName "Input ID and Password."
+AuthType Basic
+require valid-user
+<Files ~ "^.(htpasswd|htaccess)$">
+deny from all
+</Files>
